# smali

./: Cargo.toml
enum_values/: Cargo.toml
enum_values/src/: expand.rs  input.rs  lib.rs  parse.rs  util.rs
src/: main.rs  parser.rs  types.rs
src/dex/: mod.rs  types.rs
src/dex/asm/: format.rs  instruction.rs  mod.rs  opcode.rs
src/dex/parser/: mod.rs  parse.rs
src/dex/resolver/: mod.rs
src/dex/types/: file.rs  header.rs  id.rs  map.rs  refs.rs
src/parser/: asm.rs  header.rs  id.rs  map.rs
src/parser/asm/: format.rs  instruction.rs  opcode.rs
