[package]
name = "smali"
version = "0.1.0"
authors = ["Leah <me@hrmny.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
log = "0.4"
pretty_env_logger = "0.3"
enum_values = { path = "./enum_values" }
bitflags = "1"
lazy_static = "1"
