[package]
name = "smali"
version = "0.1.0"
authors = ["Leah <github.leah@hrmny.sh>"]
edition = "2018"

[features]
trace = []

[profile.release]
debug = true

[dependencies]
enum_values = { path = "./enum_values" }

with_builtin_macros = "0.0.3"

byteorder = "1.4"
bitflags = "1"
lazy_static = "1"
leb128 = "0.2"

thiserror = "1"
eyre = "0.6"
color-eyre = "0.5"
color-backtrace = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
tracing-error = "0.1"
